# backend/app/api/router.py
@@ -1,5 +1,5 @@
 from fastapi import APIRouter
-from app.api.v1 import auth, condominio, espacio_comun, residente, multa, reserva, usuario, gasto_comun, anuncios, pago, transbank
+from app.api.v1 import auth, condominio, espacio_comun, residente, multa, reserva, usuario, gasto_comun, anuncios, pago, transbank, registros
 
 api_router = APIRouter()
 
@@ -15,3 +15,4 @@ api_router.include_router(gasto_comun.router)
 api_router.include_router(anuncios.router)
 api_router.include_router(pago.router)
 api_router.include_router(transbank.router)
+api_router.include_router(registros.router)
